tests/compile-fail/integration__integration__enums__undefined_enum__compile_undefined_in_ast.snap
---
source: tests/integration/enums.rs
expression: stderr
---
error: unexpected token `enum`
   ┌─ <input>:19:31
   │
19 │             const int ConstFn(enum NotAnEnum x) {
   │                               ^^^^ unexpected token
   │
   = 
     Expected one of ")", "float", "int", "string", "var" or "void"


